; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_get_device_id.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_get_device_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_id_data = type { i32, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @get_device_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_device_id(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.device_id_data*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.device_id_data*
  store %struct.device_id_data* %12, %struct.device_id_data** %10, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load %struct.device_id_data*, %struct.device_id_data** %10, align 8
  %15 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i64 @CFStringCompare(i32 %13, i32 %16, i32 0)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %4
  %20 = load i32, i32* %9, align 4
  %21 = load %struct.device_id_data*, %struct.device_id_data** %10, align 8
  %22 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32 %20, i32* %23, align 4
  %24 = load %struct.device_id_data*, %struct.device_id_data** %10, align 8
  %25 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %24, i32 0, i32 0
  store i32 1, i32* %25, align 8
  store i32 0, i32* %5, align 4
  br label %29

26:                                               ; preds = %4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @UNUSED_PARAMETER(i32 %27)
  store i32 1, i32* %5, align 4
  br label %29

29:                                               ; preds = %26, %19
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i64 @CFStringCompare(i32, i32, i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
